# Memoria-Proyecto-1

./: CMakeLists.txt  MAINcliente.cpp  MAINservidor.cpp  README.md  clienteMemoria.cpp  clienteMemoria.h  main.cpp  mainGUI.cpp  mainGUI.h  servidorMememoria.cpp  servidorMememoria.h  servidorMemoria.cpp  servidorMemoria.h
Memoria-Proyecto1/: CMakeLists.txt  MAIN.cpp  MAINservidor.cpp  clienteMain.cpp  clienteMem.cpp  clienteMem.h  gMem.cpp  gMem.h  gMemEjm.cpp  gMemEjm.h  main.cpp  mainGUI.cpp  mainGUI.h  servMem.cpp  servMem.h
SocketsMemoria (copia)/: CMakeLists.txt  client.cpp  guiCliente.cpp  guiCliente.h  guiPrueba.cpp  main.cpp  server.cpp
SocketsMemoria V1/: CMakeLists.txt  client.cpp  guiCliente.cpp  guiCliente.h  main.cpp  server.cpp  threadGUI.cpp  threadGUI.h
